Build documentation: (2f4e439) Remove multipart/form-data for /simulation
