# dpsim_api/sidebar-items.js
@@ -1,1 +1,1 @@
-initSidebarItems({"enum":[["SimulationType","Enum for the various Simulation types"]],"fn":[["main","The main entry point for Rocket"]],"mod":[["amqp",""],["db",""],["file_service",""],["routes",""]],"struct":[["Simulation","Struct for encapsulation Simulation details"]]});
+initSidebarItems({"fn":[["get_docs",""],["main","The main entry point for Rocket"]],"mod":[["amqp",""],["db",""],["file_service",""],["routes",""]]});
