# implementors/schemars/trait.JsonSchema.js
@@ -1,3 +1,3 @@
 (function() {var implementors = {};
-implementors["dpsim_api"] = [{"text":"impl&lt;'a&gt; JsonSchema for <a class=\"struct\" href=\"dpsim_api/routes/struct.SimulationFormStruct.html\" title=\"struct dpsim_api::routes::SimulationFormStruct\">SimulationFormStruct</a>&lt;'a&gt;","synthetic":false,"types":["dpsim_api::routes::SimulationFormStruct"]},{"text":"impl JsonSchema for <a class=\"struct\" href=\"dpsim_api/routes/struct.SimulationFormStructJsonSchema.html\" title=\"struct dpsim_api::routes::SimulationFormStructJsonSchema\">SimulationFormStructJsonSchema</a>","synthetic":false,"types":["dpsim_api::routes::SimulationFormStructJsonSchema"]},{"text":"impl JsonSchema for <a class=\"struct\" href=\"dpsim_api/routes/struct.SimulationError.html\" title=\"struct dpsim_api::routes::SimulationError\">SimulationError</a>","synthetic":false,"types":["dpsim_api::routes::SimulationError"]},{"text":"impl JsonSchema for <a class=\"struct\" href=\"dpsim_api/routes/struct.AMQPSimulation.html\" title=\"struct dpsim_api::routes::AMQPSimulation\">AMQPSimulation</a>","synthetic":false,"types":["dpsim_api::routes::AMQPSimulation"]},{"text":"impl JsonSchema for <a class=\"struct\" href=\"dpsim_api/struct.Simulation.html\" title=\"struct dpsim_api::Simulation\">Simulation</a>","synthetic":false,"types":["dpsim_api::Simulation"]},{"text":"impl JsonSchema for <a class=\"enum\" href=\"dpsim_api/enum.SimulationType.html\" title=\"enum dpsim_api::SimulationType\">SimulationType</a>","synthetic":false,"types":["dpsim_api::SimulationType"]}];
+implementors["dpsim_api"] = [{"text":"impl JsonSchema for <a class=\"struct\" href=\"dpsim_api/routes/struct.Simulation.html\" title=\"struct dpsim_api::routes::Simulation\">Simulation</a>","synthetic":false,"types":["dpsim_api::routes::Simulation"]},{"text":"impl JsonSchema for <a class=\"enum\" href=\"dpsim_api/routes/enum.SimulationType.html\" title=\"enum dpsim_api::routes::SimulationType\">SimulationType</a>","synthetic":false,"types":["dpsim_api::routes::SimulationType"]},{"text":"impl JsonSchema for <a class=\"struct\" href=\"dpsim_api/routes/struct.SimulationForm.html\" title=\"struct dpsim_api::routes::SimulationForm\">SimulationForm</a>","synthetic":false,"types":["dpsim_api::routes::SimulationForm"]},{"text":"impl JsonSchema for <a class=\"struct\" href=\"dpsim_api/routes/struct.SimulationError.html\" title=\"struct dpsim_api::routes::SimulationError\">SimulationError</a>","synthetic":false,"types":["dpsim_api::routes::SimulationError"]},{"text":"impl JsonSchema for <a class=\"struct\" href=\"dpsim_api/amqp/struct.AMQPSimulation.html\" title=\"struct dpsim_api::amqp::AMQPSimulation\">AMQPSimulation</a>","synthetic":false,"types":["dpsim_api::amqp::AMQPSimulation"]}];
 if (window.register_implementors) {window.register_implementors(implementors);} else {window.pending_implementors = implementors;}})()
